third commit calculate the path and show the result on a text box comments added

--- a/Graph/App.config
+++ b/Graph/App.config
@@ -14,7 +14,9 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:60332/GraphService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IGraphService" contract="GraphService.IGraphService" name="BasicHttpBinding_IGraphService" />
+      <endpoint address="http://localhost:60332/GraphService.svc" binding="basicHttpBinding"
+        bindingConfiguration="BasicHttpBinding_IGraphService" contract="GraphService.IGraphService"
+        name="BasicHttpBinding_IGraphService" />
     </client>
   </system.serviceModel>
   <connectionStrings>
