--- a/Graph/GraphApp.csproj
+++ b/Graph/GraphApp.csproj
@@ -95,6 +95,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Models\DataVertex.cs" />
     <Compile Include="Models\DBModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -139,7 +140,6 @@
     <Compile Include="Models\GraphModel.cs" />
     <Compile Include="Models\GXCore.cs" />
     <Compile Include="Models\DataEdge.cs" />
-    <Compile Include="Models\DataVertex.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -171,10 +171,13 @@
     </None>
     <AppDesigner Include="Properties\" />
     <None Include="Service References\GraphService\GraphService.wsdl" />
-    <None Include="Service References\GraphService\GraphService.xsd">
+    <None Include="Service References\GraphService\GraphService1.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\GraphService\GraphService1.xsd">
+    <None Include="Service References\GraphService\GraphService2.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\GraphService\GraphService4.xsd">
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
@@ -183,24 +186,6 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadataStorage Include="Service References\GraphService\" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Service References\GraphService\GraphService.disco" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Service References\GraphService\configuration91.svcinfo" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Service References\GraphService\configuration.svcinfo" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Service References\GraphService\Reference.svcmap">
-      <Generator>WCF Proxy Generator</Generator>
-      <LastGenOutput>Reference.cs</LastGenOutput>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Models\DBModel.Context.tt">
@@ -213,9 +198,19 @@
       <DependentUpon>DBModel.edmx</DependentUpon>
       <LastGenOutput>DBModel.cs</LastGenOutput>
     </Content>
+    <None Include="Service References\GraphService\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+    <None Include="Service References\GraphService\configuration.svcinfo" />
+    <None Include="Service References\GraphService\configuration91.svcinfo" />
+    <None Include="Service References\GraphService\GraphService.disco" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Service References\GraphService\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
