--- a/GraphService/Web.config
+++ b/GraphService/Web.config
@@ -36,7 +36,7 @@
     <directoryBrowse enabled="true" />
   </system.webServer>
   <connectionStrings>
-    <add name="GraphDB" connectionString="metadata=res://*/Model.GraphModel.csdl|res://*/Model.GraphModel.ssdl|res://*/Model.GraphModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=USER-PC\SQLEXPRESS;initial catalog=test;persist security info=True;user id=sa;password=Kapaniar1s;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="GraphDB" connectionString="metadata=res://*/Model.GraphModel.csdl|res://*/Model.GraphModel.ssdl|res://*/Model.GraphModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=USER-PC\SQLEXPRESS;initial catalog=test;persist security info=True;user id=sa;password=12345678;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
