--- a/Graph/App.config
+++ b/Graph/App.config
@@ -20,7 +20,7 @@
     </client>
   </system.serviceModel>
   <connectionStrings>
-    <add name="GraphDB" connectionString="metadata=res://*/Models.DBModel.csdl|res://*/Models.DBModel.ssdl|res://*/Models.DBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=USER-PC\SQLEXPRESS;initial catalog=test;persist security info=True;user id=sa;password=Kapaniar1s;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="GraphDB" connectionString="metadata=res://*/Models.DBModel.csdl|res://*/Models.DBModel.ssdl|res://*/Models.DBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=USER-PC\SQLEXPRESS;initial catalog=test;persist security info=True;user id=sa;password=12345678;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
